--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -2,7 +2,10 @@ name: self reference
 on: push
 jobs:
     use:
-        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest, macos-latest]
+        runs-on: ${{ matrix.os }}
         steps:
         - uses: actions/checkout@main
         - uses: ./
