--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -4,7 +4,7 @@ jobs:
     use:
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest]
         runs-on: ${{ matrix.os }}
         steps:
         - uses: actions/checkout@main
