--- a/action.yaml
+++ b/action.yaml
@@ -9,19 +9,12 @@ runs:
   using: "composite"
   steps:
     - if: runner.os == 'Linux'
-      run: curl -sS https://raw.githubusercontent.com/davidkhala/setup-podman/refs/heads/main/ubuntu/setup.sh | bash
-      shell: bash
-    - if: runner.os == 'Windows'
       run: |
-        Invoke-WebRequest -Uri https://github.com/containers/podman/releases/download/v5.5.1/podman-5.5.1-setup.exe -OutFile podman-setup.exe
-        Start-Process -FilePath ".\podman-setup.exe" -ArgumentList "/S" -Wait
-      shell: powershell
-    - if: runner.os == 'Windows'
-      run: podman machine init --user-mode-networking --now
-      shell: powershell
-    - if: runner.os != 'Windows'
-      # TODO debug
-      run: |
-        cat /usr/bin/qemu-system-x86_64
+        curl -sS https://raw.githubusercontent.com/davidkhala/setup-podman/refs/heads/main/ubuntu/setup.sh | bash
         podman machine init --user-mode-networking --now
       shell: bash
+    - if: runner.os == 'Windows'
+      run: |
+        iex (iwr 'https://raw.githubusercontent.com/davidkhala/setup-podman/refs/heads/main/windows/setup.ps1').Content
+        & "C:\Program Files\RedHat\Podman\podman.exe" machine init --user-mode-networking --now
+      shell: powershell
