--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -9,5 +9,7 @@ jobs:
         steps:
         - uses: actions/checkout@main
         - uses: ./
+        - run: podman version
+          
         
     
