--- a/action.yaml
+++ b/action.yaml
@@ -16,5 +16,5 @@ runs:
     - if: runner.os == 'Windows'
       run: |
         iex (iwr 'https://raw.githubusercontent.com/davidkhala/setup-podman/refs/heads/main/windows/setup.ps1').Content
-        & "C:\Program Files\RedHat\Podman\podman.exe" machine init --user-mode-networking --now
+        'C:\Program Files\RedHat\Podman' | Out-File -FilePath $env:GITHUB_PATH -Append
       shell: powershell
