--- a/.github/workflows/self.yaml
+++ b/.github/workflows/self.yaml
@@ -9,7 +9,7 @@ jobs:
         steps:
         - uses: actions/checkout@main
         - uses: ./
-        - run: podman version
+        - run: podman context ls
           
         
     
